--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "~4.0.0",
+    "read-yaml": "^1.1.0",
     "request": "^2.87.0",
     "sqlite3": "^4.0.0"
   }
