--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "express-router-experiments",
   "main": "server.js",
   "dependencies": {
+    "async": "^2.6.1",
     "body-parser": "^1.18.3",
-    "express": "~4.0.0",
+    "express": "^4.16.3",
     "read-yaml": "^1.1.0",
     "request": "^2.87.0",
-    "sqlite3": "^4.0.0"
+    "sqlite3": "^4.0.1"
   }
 }
